export class Content {
    id: string
    url: string
    title: string
    description: string
    duration: number
    isCompleted: boolean
}
