export class Track {
    id: string
    name: string
    createdAt: Date
    updatedAt: Date
}
